# Coral

./: Cargo.toml  README.md  build.rs  viewer.html
.github/workflows/: clippy.yml  docs.yml  rust.yml
src/: actions.rs  ball.rs  game_controller.rs  gc.rs  lib.rs  main.rs  math.rs  posvelacc.rs  robot.rs  simulation_control.rs  trackable.rs  vec2.rs  viewer.rs  vision.rs
src/actions/: mod.rs
src/controllers/: mod.rs  sim_controller.rs
src/league_protocols/: game_controller_packet.rs  mod.rs  robot_packet.rs  simulation_packet.rs  vision_packet.rs
src/math/: line.rs  mod.rs  point.rs  reactive.rs  rect.rs  vec.rs
src/net/: mod.rs  multicast_receiver.rs  udp_transceiver.rs
src/strategies/: mod.rs  square.rs  three_attackers.rs
src/testing/: mod.rs
src/trajectories/: bangbang1d.rs  bangbang2d.rs  mod.rs
src/vision/: mod.rs
src/world/: ball.rs  mod.rs  robot.rs  trackable.rs
