[package]
name = "crabe_async"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# path planning
rrt = "0.7.0"
rand = "0.8.5"
# multicast sockets
socket2 = "0.5.8"

plotters = "0.3.7"

# protobuf
prost = "0.13"
prost-types = "0.13.1"

[build-dependencies]
prost-build = "0.13.4"
