[package]
name = "crabe_async"
version = "0.1.0"
edition = "2021"
default-run = "crabe_async"

[dependencies]
# async executor / runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"

# maths
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }

# path planning
rrt = "0.7.0"
rand = "0.8.5"

# advanced socket configuration
socket2 = "0.5.8"

# viz
tokio-tungstenite = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"

# protobuf
prost = "0.13"
prost-types = "0.13.1"

[build-dependencies]
prost-build = "0.13.4"
